working on a solution to include multiple dimensions in regression analysis

--- a/Year-LifeExpectancy edited.ipynb
+++ b/Year-LifeExpectancy edited.ipynb
@@ -12,6 +12,7 @@
     "import random \n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt \n",
+    "import seaborn as sns\n",
     "\n",
     "from regression_utils import *\n",
     "\n",
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -50,55 +51,72 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "countryQuantity: \n",
-      " 994     81.0\n",
-      "995     89.0\n",
-      "996     86.0\n",
-      "997     86.0\n",
-      "998     85.0\n",
-      "999     81.0\n",
-      "1000    80.0\n",
-      "1001    79.9\n",
-      "1002    79.8\n",
-      "1003    79.6\n",
-      "1004    79.2\n",
-      "1005    79.1\n",
-      "1006    78.5\n",
-      "1007    78.4\n",
-      "1008    78.3\n",
-      "1009    78.0\n",
-      "Name: Life expectancy, dtype: float64\n",
-      "allFeatures: \n",
-      "       Year  Life expectancy  Total expenditure\n",
-      "994   2015             81.0            5.93819\n",
-      "995   2014             89.0           11.30000\n",
-      "996   2013             86.0           11.16000\n",
-      "997   2012             86.0            1.99000\n",
-      "998   2011             85.0            1.93000\n",
-      "999   2010             81.0           11.25000\n",
-      "1000  2009             80.0           11.40000\n",
-      "1001  2008             79.9            1.39000\n",
-      "1002  2007             79.8            1.18000\n",
-      "1003  2006             79.6            1.34000\n",
-      "1004  2005             79.2            1.52000\n",
-      "1005  2004             79.1            1.37000\n",
-      "1006  2003             78.5            1.62000\n",
-      "1007  2002             78.4            1.40000\n",
-      "1008  2001             78.3            1.15000\n",
-      "1009  2000             78.0            1.10000\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'tolist'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-e5f5964924a1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0msplit\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m15\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;31m#countryQuantityTrain, yearsTrain, countryQuantityTest, yearsTest = randomizer(countryQuantity, years, split)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m \u001b[0mcountryQuantityTrain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallFeaturesTrain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcountryQuantityTest\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallFeaturesTest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrandomizer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcountryQuantity\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallFeatures\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msplit\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/Desktop/bigp/regression_utils.py\u001b[0m in \u001b[0;36mrandomizer\u001b[0;34m(countryQuantity, years, split)\u001b[0m\n\u001b[1;32m     90\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mrandomizer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcountryQuantity\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0myears\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msplit\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     91\u001b[0m     \u001b[0mcountryQuantity\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcountryQuantity\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 92\u001b[0;31m     \u001b[0myears\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0myears\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     93\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     94\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Train:Test split is: '\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m':'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m16\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   4374\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4375\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4376\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4377\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4378\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'tolist'"
+      "      Country  Year     Status  Life expectancy  Adult Mortality  \\\n",
+      "1001  Germany  2008  Developed             79.9              8.0   \n",
+      "995   Germany  2014  Developed             89.0             69.0   \n",
+      "994   Germany  2015  Developed             81.0             68.0   \n",
+      "1000  Germany  2009  Developed             80.0             79.0   \n",
+      "1006  Germany  2003  Developed             78.5              9.0   \n",
+      "1003  Germany  2006  Developed             79.6             84.0   \n",
+      "996   Germany  2013  Developed             86.0             71.0   \n",
+      "998   Germany  2011  Developed             85.0             74.0   \n",
+      "1002  Germany  2007  Developed             79.8             82.0   \n",
+      "1005  Germany  2004  Developed             79.1             86.0   \n",
+      "1009  Germany  2000  Developed             78.0             95.0   \n",
+      "\n",
+      "      infant deaths    Alcohol  percentage expenditure  Hepatitis B  Measles   \\\n",
+      "1001              2  11.360000             8285.264655         87.0       917   \n",
+      "995               2  11.030000              941.756291         88.0       443   \n",
+      "994               2   4.602861                0.000000         88.0      2464   \n",
+      "1000              2  11.220000             7641.270645         88.0       574   \n",
+      "1006              3  11.920000              582.615703          9.0       779   \n",
+      "1003              3  11.760000             6407.535954         87.0      2307   \n",
+      "996               2  10.940000              895.877950         88.0      1771   \n",
+      "998               2  11.200000              869.790735         88.0      1607   \n",
+      "1002              3  11.500000             7777.556353         86.0       567   \n",
+      "1005              3  11.830000             5842.374765         88.0       121   \n",
+      "1009              3  12.910000             4238.540035         84.0         0   \n",
+      "\n",
+      "        ...      Polio  Total expenditure  Diphtheria  HIV/AIDS          GDP  \\\n",
+      "1001    ...       95.0            1.39000        96.0       0.1  45699.19832   \n",
+      "995     ...       94.0           11.30000        95.0       0.1   4792.65288   \n",
+      "994     ...       94.0            5.93819        95.0       0.1  41176.88158   \n",
+      "1000    ...       95.0           11.40000        96.0       0.1  41732.77250   \n",
+      "1006    ...       96.0            1.62000        97.0       0.1   3359.95215   \n",
+      "1003    ...       94.0            1.34000        96.0       0.1  36447.87232   \n",
+      "996     ...       94.0           11.16000        95.0       0.1   4653.91143   \n",
+      "998     ...       94.0            1.93000        95.0       0.1   4681.32796   \n",
+      "1002    ...       95.0            1.18000        96.0       0.1  41814.81910   \n",
+      "1005    ...       96.0            1.37000        96.0       0.1  34165.93430   \n",
+      "1009    ...       94.0            1.10000         9.0       0.1  23718.74670   \n",
+      "\n",
+      "      Population  thinness  1-19 years  thinness 5-9 years  \\\n",
+      "1001    821197.0                   1.1                 1.1   \n",
+      "995      89825.0                   1.1                 1.1   \n",
+      "994   81686611.0                   1.1                 1.1   \n",
+      "1000    819237.0                   1.1                 1.1   \n",
+      "1006  82534176.0                   1.1                 1.1   \n",
+      "1003  82376451.0                   1.1                 1.1   \n",
+      "996     864565.0                   1.1                 1.1   \n",
+      "998    8274983.0                   1.1                 1.1   \n",
+      "1002  82266372.0                   1.1                 1.1   \n",
+      "1005   8251626.0                   1.1                 1.1   \n",
+      "1009   8221158.0                   1.2                 1.2   \n",
+      "\n",
+      "      Income composition of resources  Schooling  \n",
+      "1001                            0.903       16.6  \n",
+      "995                             0.920       17.0  \n",
+      "994                             0.924       17.1  \n",
+      "1000                            0.906       16.7  \n",
+      "1006                            0.872       16.3  \n",
+      "1003                            0.892       16.5  \n",
+      "996                             0.919       16.9  \n",
+      "998                             0.912       16.8  \n",
+      "1002                            0.898       16.6  \n",
+      "1005                            0.877       16.4  \n",
+      "1009                            0.855       16.2  \n",
+      "\n",
+      "[11 rows x 22 columns]\n"
      ]
     }
    ],
@@ -109,23 +127,17 @@
     "# Quantity variation of 3 countries (Germany, Netherlands, Spain)\n",
     "# change here \n",
     "country = 'Germany'\n",
+    "countryQuantity = 'Life expectancy'\n",
     "countryDataFrame = countryDF(country, df)\n",
-    "countryQuantity = columnExtractor(countryDataFrame,'Life expectancy')\n",
-    "print('countryQuantity: \\n',countryQuantity)\n",
+    "countryQuantityDF = columnExtractor(countryDataFrame, countryQuantity)\n",
+    "#print(countryQuantity, ' \\n ',countryQuantityDF)\n",
     "    \n",
-    "desiredFeatures = ['Year', 'Life expectancy', 'Total expenditure']\n",
+    "desiredFeatures = ['Year', 'Total expenditure']\n",
     "allFeatures = variableColumnExtractor(countryDataFrame, desiredFeatures)\n",
-    "print('allFeatures: \\n',allFeatures)\n",
+    "#print('allFeatures: \\n',allFeatures)\n",
     "\n",
-    "#percentage_expenditure = columnExtractor(countryDataFrame,'percentage expenditure')\n",
-    "#print(percentage_expenditure)\n",
-    "\n",
-    "#plotQuantities(years, countryQuantity,'Years','Population', country,'Population vs Years')\n",
-    "#plotQuantities(years, countryQuantity, 'Years', 'Life Expectancy', country, 'Life Expectancy vs Years')\n",
-    "\n",
-    "split = np.random.randint(1,15)\n",
-    "#countryQuantityTrain, yearsTrain, countryQuantityTest, yearsTest = randomizer(countryQuantity, years, split)\n",
-    "countryQuantityTrain, allFeaturesTrain, countryQuantityTest, allFeaturesTest = randomizer(countryQuantity, allFeatures, split)\n"
+    "randomRows = countryDataFrame.sample(frac=0.7)\n",
+    "print(randomRows)"
    ]
   },
   {
@@ -192,7 +204,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
