--- a/MultipleFeatureAnalysis.ipynb
+++ b/MultipleFeatureAnalysis.ipynb
@@ -51,42 +51,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "998     85.0\n",
-      "1006    78.5\n",
-      "994     81.0\n",
-      "1004    79.2\n",
+      "Training data (X) : \n",
+      " 996     86.0\n",
       "997     86.0\n",
-      "1009    78.0\n",
-      "995     89.0\n",
-      "1005    79.1\n",
-      "1000    80.0\n",
-      "996     86.0\n",
       "1002    79.8\n",
-      "Name: Life expectancy, dtype: float64\n",
+      "998     85.0\n",
+      "995     89.0\n",
+      "1000    80.0\n",
+      "1005    79.1\n",
       "999     81.0\n",
-      "1001    79.9\n",
       "1003    79.6\n",
+      "1004    79.2\n",
+      "1006    78.5\n",
+      "Name: Life expectancy, dtype: float64\n",
+      "Test data (X): \n",
+      " 994     81.0\n",
+      "1001    79.9\n",
       "1007    78.4\n",
       "1008    78.3\n",
+      "1009    78.0\n",
       "Name: Life expectancy, dtype: float64\n",
-      "      Year  Total expenditure\n",
-      "998   2011            1.93000\n",
-      "1006  2003            1.62000\n",
-      "994   2015            5.93819\n",
-      "1004  2005            1.52000\n",
-      "997   2012            1.99000\n",
-      "1009  2000            1.10000\n",
-      "995   2014           11.30000\n",
-      "1005  2004            1.37000\n",
-      "1000  2009           11.40000\n",
-      "996   2013           11.16000\n",
-      "1002  2007            1.18000\n",
-      "      Year  Total expenditure\n",
+      "Training data (Y): \n",
+      "       Year  Total expenditure\n",
+      "996   2013              11.16\n",
+      "997   2012               1.99\n",
+      "1002  2007               1.18\n",
+      "998   2011               1.93\n",
+      "995   2014              11.30\n",
+      "1000  2009              11.40\n",
+      "1005  2004               1.37\n",
       "999   2010              11.25\n",
-      "1001  2008               1.39\n",
       "1003  2006               1.34\n",
-      "1007  2002               1.40\n",
-      "1008  2001               1.15\n"
+      "1004  2005               1.52\n",
+      "1006  2003               1.62\n",
+      "Test data (Y): \n",
+      "       Year  Total expenditure\n",
+      "994   2015            5.93819\n",
+      "1001  2008            1.39000\n",
+      "1007  2002            1.40000\n",
+      "1008  2001            1.15000\n",
+      "1009  2000            1.10000\n"
      ]
     }
    ],
@@ -105,15 +109,15 @@
     "\n",
     "countryQuantityTrain = columnExtractor(randomRowsTrain, countryQuantity)\n",
     "countryQuantityTest = columnExtractor(randomRowsTest, countryQuantity)\n",
-    "print(countryQuantityTrain)\n",
-    "print(countryQuantityTest)\n",
+    "print('Training data (X) : \\n',countryQuantityTrain)\n",
+    "print('Test data (X): \\n',countryQuantityTest)\n",
     "\n",
     "\n",
     "desiredFeatures = ['Year', 'Total expenditure']\n",
     "allFeaturesTrain = variableColumnExtractor(randomRowsTrain, desiredFeatures)\n",
     "allFeaturesTest = variableColumnExtractor(randomRowsTest, desiredFeatures)\n",
-    "print(allFeaturesTrain)\n",
-    "print(allFeaturesTest)\n",
+    "print('Training data (Y): \\n',allFeaturesTrain)\n",
+    "print('Test data (Y): \\n',allFeaturesTest)\n",
     "\n",
     "#df_percent = df.sample(frac=0.7)\n",
     "#df_rest = df.loc[~df.index.isin(df_percent.index)]\n",
@@ -122,37 +126,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "length scale is:  2\n",
-      "[80.78743287 80.83866708 79.46901063 78.54403885 78.70207105]\n"
+      "Test data (X): \n",
+      " 994     81.0\n",
+      "1001    79.9\n",
+      "1007    78.4\n",
+      "1008    78.3\n",
+      "1009    78.0\n",
+      "Name: Life expectancy, dtype: float64\n",
+      "Test data (Y): \n",
+      "       Year  Total expenditure\n",
+      "994   2015            5.93819\n",
+      "1001  2008            1.39000\n",
+      "1007  2002            1.40000\n",
+      "1008  2001            1.15000\n",
+      "1009  2000            1.10000\n",
+      "Predicted data (X): \n",
+      "       Year  Total expenditure\n",
+      "994   2015            5.93819\n",
+      "1001  2008            1.39000\n",
+      "1007  2002            1.40000\n",
+      "1008  2001            1.15000\n",
+      "1009  2000            1.10000\n",
+      "Predicted data (Y): \n",
+      " [97.92596316 80.78169504 79.11468646 80.08306333 80.23820585]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/mihir/anaconda3/lib/python3.7/site-packages/sklearn/gaussian_process/gpr.py:480: ConvergenceWarning: fmin_l_bfgs_b terminated abnormally with the  state: {'grad': array([-8.99515626, -0.0000409 ]), 'task': b'ABNORMAL_TERMINATION_IN_LNSRCH', 'funcalls': 60, 'nit': 17, 'warnflag': 2}\n",
+      "  ConvergenceWarning)\n"
      ]
     }
    ],
    "source": [
+    "##Gaussian regression analysis \n",
+    "\n",
     "lengthScale = np.random.randint(50) \n",
     "kernel = C(1.0, (1e-3, 1e3)) * RBF(lengthScale, (1e-2, 1e2))\n",
-    "print('length scale is: ',lengthScale)\n",
+    "\n",
     "gp = GaussianProcessRegressor(kernel=kernel, n_restarts_optimizer=9)\n",
     "\n",
     "gp.fit(allFeaturesTrain, countryQuantityTrain)\n",
     "countryQuantityPredict, sigma = gp.predict(allFeaturesTest, return_std=True)\n",
     "\n",
-    "print(countryQuantityPredict)"
+    "print('Test data (X): \\n',countryQuantityTest)\n",
+    "print('Test data (Y): \\n',allFeaturesTest)\n",
+    "print('Predicted data (X): \\n',allFeaturesTest)\n",
+    "print('Predicted data (Y): \\n',countryQuantityPredict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[88.73253113 82.26206361 75.94968174 74.94695835 73.90502416]\n"
+     ]
+    }
+   ],
    "source": [
-    "countryQuantityPredictLR = linearRegression(yearsTrain, countryQuantityTrain, yearsTest, countryQuantityTest, years, countryQuantity)"
+    "##Linear regression analysis \n",
+    "\n",
+    "regr = linear_model.LinearRegression()\n",
+    "regr.fit(allFeaturesTrain, countryQuantityTrain)\n",
+    "\n",
+    "countryQuantityPredictLR = regr.predict(allFeaturesTest)\n",
+    "\n",
+    "print(countryQuantityPredictLR)"
    ]
   },
   {
