added description for the dataset

--- a/src/DataPreprocessing.ipynb
+++ b/src/DataPreprocessing.ipynb
@@ -24,8 +24,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#load data \n",
+    "# load data \n",
     "df = pd.read_csv('datasets_12603_17232_Life Expectancy Data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['country', 'year', 'status', 'life_expectancy', 'adult_mortality',\n",
+       "       'infant_deaths', 'alcohol', 'percentage_expenditure', 'hepatitis_b',\n",
+       "       'measles', 'bmi', 'under-five_deaths', 'polio', 'total_expenditure',\n",
+       "       'diphtheria', 'hiv/aids', 'gdp', 'population', 'thinness_10-19_years',\n",
+       "       'thinness_5-9_years', 'income_composition_of_resources', 'schooling'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Metric | Explanation | <br>\n",
+    "| :- | :- | :- |\n",
+    "| country | name of the country | <br> \n",
+    "|year      | time period of data collection <br> \n",
+    "|status    | developed or developing <br> \n",
+    "|life_expectancy | life expectancy for a particular year <br> \n",
+    "|adult_mortality | number of deaths (aged 15-60) per 1000 people <br> \n",
+    "|infant_death | number of infant deaths per 1000 <br> \n",
+    "|alcohol | country's alcohol consumption measured as litres consumer per capita <br> \n",
+    "|%_expenditure | health expenditure as percentage of GDP <br> \n",
+    "|hepatitis_b | # of 1 year olds with hepatitis B immunization / total # of 1 year old <br> \n",
+    "|measles | # of measles cases reported per 1000 <br> \n",
+    "|bmi | average bmi of population <br> \n",
+    "|under_5_death | # of deaths for < 5 year olds per 1000 <br> \n",
+    "|polio | # of 1 year olds with polio immunization / total # of 1 year old <br> \n",
+    "|total_expenditure | government health expenditure / total government expenditure <br> \n",
+    "|diphtheria | # of 1 year olds with diphtheria immunization / total # of 1 year old <br> \n",
+    "|hiv_aids | # of people under 5 who die due to hiv/aids per 1000 births <br> \n",
+    "|gdp | gdp per capita <br> \n",
+    "|population | population <br> \n",
+    "|thinness_10-19_years | # of thin people aged 10-19 per 1000 people <br> \n",
+    "|thinness_5-9_years | # of thin people aged 5-9 per 1000 people <br> \n",
+    "|income_composition_of_resources | HDI in terms of income composition <br>\n",
+    "|schooling | average number of years of school attendance "
    ]
   },
   {
@@ -50,7 +105,10 @@
     }
    ],
    "source": [
+    "# renaming the columns by removing additional spaces \n",
     "df.rename(columns = lambda x: x.strip().replace(' ', '_').lower(), inplace=True)\n",
+    "\n",
+    "# renaming the column appropriately \n",
     "df.rename(columns = {'thinness_1-19_years':'thinness_10-19_years'}, inplace=True)\n",
     "df.columns"
    ]
@@ -94,6 +152,7 @@
     }
    ],
    "source": [
+    "# computing the total number of NaN entries \n",
     "df.isnull().sum()"
    ]
   },
@@ -103,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#let's look at the distributions of our continuous variables\n",
+    "# visualize the distributions of continuous variables\n",
     "num_cols = ['life_expectancy', 'adult_mortality',\n",
     "       'infant_deaths', 'alcohol', 'percentage_expenditure', 'hepatitis_b',\n",
     "       'measles', 'bmi', 'under-five_deaths', 'polio', 'total_expenditure',\n",
@@ -146,7 +205,7 @@
     }
    ],
    "source": [
-    "# detecting outliers\n",
+    "# visualizing outliers via boxplot\n",
     "plt.figure(figsize=(20,60))\n",
     "\n",
     "for i, col in enumerate(num_cols):\n",
@@ -178,6 +237,7 @@
     }
    ],
    "source": [
+    "# visualizing boxplots via histograms \n",
     "plt.figure(figsize=(20,60))\n",
     "\n",
     "for i, col in enumerate(num_cols):\n",
@@ -190,6 +250,22 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Observations from the boxplots and histograms: <br> \n",
+    "(i) infant deaths exceeed 1000: violates the definition of the metric <br> \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
