added observations from analysis

--- a/src/DataPreprocessing.ipynb
+++ b/src/DataPreprocessing.ipynb
@@ -540,6 +540,19 @@
     "# quantitative analysis of dataset \n",
     "df.describe().iloc[:, 1:]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Observations from the boxplots, histograms and quantitative analysis: <br> \n",
+    "<br>\n",
+    "(i) **infant deaths exceeed 1000:** violates the definition of the metric <br> \n",
+    "(ii) **measles** : violates the definition of the metric (can not exceed 1000) <br> \n",
+    "(iii) **under_five_deaths** : violates the definition of the metric (can not exceed 1000) <br> \n",
+    "(iv) **bmi** : can not practically exceed 50 or be as low as 1  <br> \n",
+    "(v) **gdp** : cant be as low as $1 <br>"
+   ]
   }
  ],
  "metadata": {
