adding output for multiple feature regression analysis in the output/ folder

--- a/src/DataPreprocessing.ipynb
+++ b/src/DataPreprocessing.ipynb
@@ -572,7 +572,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f420b90d048>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fb2f4ad03c8>"
       ]
      },
      "execution_count": 11,
@@ -1310,6 +1310,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the quantitatve analysis of the table above, it can safely be inferred that useful features for target feature estimation can be  <br> \n",
+    "(i) year <br> \n",
+    "(ii) adult_mortality <br>\n",
+    "(iii) infant_deaths <br> \n",
+    "(iv) alcohol <br> \n",
+    "(v) hepatitis_b <br> \n",
+    "(vi) under_five_deaths <br> \n",
+    "(vii) polio  <br> \n",
+    "(viii) dipthteria <br> \n",
+    "(ix) hiv/aids <br> \n",
+    "(x) thinness_10-19_years <br> \n",
+    "(xi) thinness_5-9_years <br> \n",
+    "(xii) income_composition_of_resources <br> \n",
+    "(xiii) schooling <br> \n",
+    "\n",
+    "\n",
+    "Logic for the unselected features: <br> \n",
+    "(i) percentage_expenditure : can not be 0 (in 2015) <br> \n",
+    "(ii) measles : can not have so much variation <br> \n",
+    "(iii) bmi : unrealistic values <br> \n",
+    "(iv) total_expenditure : same reason as bmi <br> \n",
+    "(v) gdp : can not be as less as 2525 <br> \n",
+    "(vi) population : can not be as low as 89000 <br> "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
@@ -1317,7 +1346,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f41f23fccc0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fb2f5d36cc0>"
       ]
      },
      "execution_count": 19,
