--- a/src/DataPreprocessing.ipynb
+++ b/src/DataPreprocessing.ipynb
@@ -4,7 +4,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data preprocessing "
+    "# Comparison for Regressions on WHO Life Expectancy Dataset "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Introduction \n",
+    "<br> \n",
+    "(i) This project focusses on performance comparison of Gaussian Process Regression with Linear Regression. <br> \n",
+    "(ii) WHO Life expectancy dataset has been selected for the project and has the size of 2938 data points for 22 features. <br> \n",
+    "(iii) Objective is to find errors in both regression analysis when compared to the groundtruth. \n",
+    "\n",
+    "\n",
+    "### Assumptions \n",
+    "(i) Country specific analysis has been conducted in this project. <br> \n",
+    "(ii) For the scope of this project the regression analysis for Germany has been conducted keeping Life expectancy as the target variable.<br>\n",
+    "(iii) Owing to the scarcity in the datapoints (per country), the rectification of outliers has been avoided. Instead, via data visualization, only those features are selected for regression analysis having appropriate values and tolerable outlier count. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data preprocessing "
    ]
   },
   {
@@ -67,6 +91,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Introduction to the dataset (Life-Expectancy WHO) \n",
+    "\n",
     "| Metric | Explanation | <br>\n",
     "| :- | :- | :- |\n",
     "| country | name of the country  <br> \n",
@@ -90,7 +116,19 @@
     "|thinness_10-19_years | # of thin people aged 10-19 per 1000 people <br> \n",
     "|thinness_5-9_years | # of thin people aged 5-9 per 1000 people <br> \n",
     "|income_composition_of_resources | HDI in terms of income composition <br>\n",
-    "|schooling | average number of years of school attendance "
+    "|schooling | average number of years of school attendance \n",
+    "\n",
+    "\n",
+    "\n",
+    "<br> \n",
+    "All values for the features are provided from year 2000-2015 (span of 16 years)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Homogenizing column names "
    ]
   },
   {
@@ -121,6 +159,13 @@
     "# renaming the column appropriately \n",
     "df.rename(columns = {'thinness_1-19_years':'thinness_10-19_years'}, inplace=True)\n",
     "df.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  Computing number of NaN"
    ]
   },
   {
@@ -186,6 +231,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Replacing NaN by mean"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -194,6 +246,13 @@
     "# replace NaN by mean \n",
     "for col in num_cols:\n",
     "    df[col].fillna(df[col].mean(), inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualizing data "
    ]
   },
   {
@@ -215,7 +274,7 @@
     }
    ],
    "source": [
-    "# visualizing outliers via boxplot\n",
+    "# visualizing via boxplot\n",
     "plt.figure(figsize=(20,60))\n",
     "\n",
     "for i, col in enumerate(num_cols):\n",
@@ -247,7 +306,7 @@
     }
    ],
    "source": [
-    "# visualizing boxplots via histograms \n",
+    "# visualizing via histograms \n",
     "plt.figure(figsize=(20,60))\n",
     "\n",
     "for i, col in enumerate(num_cols):\n",
@@ -555,13 +614,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Points to ponder (1)\n",
     "Observations from the boxplots, histograms and quantitative analysis: <br> \n",
     "<br>\n",
     "(i) **infant deaths exceeed 1000:** violates the definition of the metric <br> \n",
-    "(ii) **measles** : violates the definition of the metric (can not exceed 1000) <br> \n",
-    "(iii) **under_five_deaths** : violates the definition of the metric (can not exceed 1000) <br> \n",
-    "(iv) **bmi** : can not practically exceed 50 or be as low as 1  <br> \n",
-    "(v) **gdp** : cant be as low as $1 <br>"
+    "(ii) **percentage_expenditure:** slims chances that a country has 0 % health expenditure of total<br>\n",
+    "(iii) **measles** : violates the definition of the metric (can not exceed 1000) <br> \n",
+    "(iv) **under_five_deaths** : violates the definition of the metric (can not exceed 1000) <br> \n",
+    "(v) **total_expenditure:** can not be as less as 0.37 <br> \n",
+    "(vi) **bmi** : can not practically exceed 50 or be as low as 1  <br> \n",
+    "(vii) **gdp** : cant be as low as $1 <br>"
    ]
   },
   {
@@ -572,7 +634,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fb2f4ad03c8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd90f7a19b0>"
       ]
      },
      "execution_count": 11,
@@ -602,7 +664,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Country specific analysis"
+    "### Points to ponder (2)\n",
+    "\n",
+    "The target feature for this dataset is Life Expectancy, hence the subsequent discussions would be pertaining this feature. From the heatmap, it can be analysed that following features have high correlation (>0.5) with Life Expectancy : <br> \n",
+    "(i) adult_mortality <br> \n",
+    "(ii) bmi <br> \n",
+    "(iii) hiv/aids <br> \n",
+    "(iv) income_composition_of_resources <br> \n",
+    "(v) schooling <br> \n",
+    "\n",
+    "The aforementioned features could prove to be useful during regression analysis. \n",
+    "\n",
+    "Owing to the size of dataset, it is decided that the regression analysis would be conducted on a country wise basis. For the scope this project, Germany has been selected  for the regression analysis. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Country specific analysis"
    ]
   },
   {
@@ -676,6 +756,13 @@
    ],
    "source": [
     "countryDataFrame.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Storing dataframe to be used in other notebooks in this project"
    ]
   },
   {
@@ -753,6 +840,13 @@
     "    v_col = v[(v <= q1 - 1.5 * irq) | (v >= q3 + 1.5 * irq)]\n",
     "    perc = np.shape(v_col)[0] * 100.0 / np.shape(countryDataFrame)[0]\n",
     "    print(\"Column %s outliers = %.2f%%\" % (k, perc))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualizing data "
    ]
   },
   {
@@ -1313,6 +1407,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Points to ponder (3)\n",
+    "\n",
     "From the quantitatve analysis of the table above, it can safely be inferred that useful features for target feature estimation can be  <br> \n",
     "(i) year <br> \n",
     "(ii) adult_mortality <br>\n",
@@ -1346,7 +1442,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fb2f5d36cc0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd8eeb14080>"
       ]
      },
      "execution_count": 19,
@@ -1370,6 +1466,26 @@
     "#heat map for total dataset \n",
     "plt.figure(figsize=(20, 15))\n",
     "sns.heatmap(countryDataFrame.corr().abs(),  annot=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Points to ponder (5)\n",
+    "\n",
+    "For Germany, the heatmap depicts a different scenario. Following are the features that are highly correlated (>0.5) with Life Expectancy when considering solely Germany :  <br> \n",
+    "(i) year <br> \n",
+    "(ii) infant_death_rates <br> \n",
+    "(iii) under_five_deaths <br> \n",
+    "(iv) polio <br> \n",
+    "(v) total_expenditure <br> \n",
+    "(vi) gdp <br> \n",
+    "(vii) population <br> \n",
+    "(viii) income_composition_of_resources <br> \n",
+    "(ix) schooling \n",
+    "\n",
+    "Further visualization is needed in order to isolate the features to run regression analysis on. "
    ]
   },
   {
@@ -1405,6 +1521,20 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This visualization along with the heatmap can be used in order to isolate the features on which the regression analysis can be implemented on. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
