adding new sections describing kernels in MultipleFeatureAnalysis.ipynb

--- a/src/DataPreprocessing.ipynb
+++ b/src/DataPreprocessing.ipynb
@@ -21,7 +21,8 @@
     "### Assumptions \n",
     "(i) Country specific analysis has been conducted in this project. <br> \n",
     "(ii) For the scope of this project the regression analysis for Germany has been conducted keeping Life expectancy as the target variable.<br>\n",
-    "(iii) Owing to the scarcity in the datapoints (per country), the rectification of outliers has been avoided. Instead, via data visualization, only those features are selected for regression analysis having appropriate values and tolerable outlier count. "
+    "(iii) Owing to the scarcity in the datapoints (per country), the rectification of outliers has been avoided. Instead, via data visualization, only those features are selected for regression analysis having appropriate values and tolerable outlier count. <br>\n",
+    "(iv) Same lengthscale for all the input features in case of Gaussian Process Regression<br> "
    ]
   },
   {
@@ -1526,15 +1527,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This visualization along with the heatmap can be used in order to isolate the features on which the regression analysis can be implemented on. "
+    "Following features are identified on which the regression analysis can be implemented on: \n",
+    "<br> \n",
+    "(i) adult_mortality <br> \n",
+    "(ii) infant_deaths <br> \n",
+    "(iii) alcohol <br> \n",
+    "(iv) hepatitis_b <br> \n",
+    "(v) under-five_deaths <br> \n",
+    "(vi) polio <br> \n",
+    "(vii) diphtheria <br> \n",
+    "(viii) hiv/aids <br> \n",
+    "(ix) thinness_10-19_years <br> \n",
+    "(x) thinness_5-9_years <br> \n",
+    "(xi)  income_composition_of_resources <br> \n",
+    "(xii) schooling<br> \n",
+    "(xiii) year<br> \n",
+    "\n",
+    "The decision to select these features (specific to Germany) was made on the basis of visualizations and heatmap along with following reasoning: <br> \n",
+    "(i) percentage_expenditure: drastic variation and possible erroneous values <br> \n",
+    "(ii) measles: same as percentage_expenditure <br> \n",
+    "(iii) bmi: unrealistic values (>50 or <1) <br> \n",
+    "(iv) total_expenditure: drastic variation <br> \n",
+    "(v) gdp: cant be as low as 2525 <br> \n",
+    "(vi) population: drastic variation\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
